--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,16 @@ uside_patch_set_01.zip
 uside_stage1_files.zip
 uside_stage1_patch_bundle.zip
 src/src.zip
+junk-folder/error-logs-5-01pm.txt
+junk-folder/error-logs-5pm.txt
+junk-folder/error-logs-6-25pm.txt
+junk-folder/error-logs-6-40pm.txt
+junk-folder/error-logs-6pm.txt
+junk-folder/error-logs-7-10pm.txt
+junk-folder/error-logs-7pm.txt
+junk-folder/error-logs-14-10-2025.txt
+junk-folder/error-logs-14-oct.txt
+junk-folder/error-logs-14-october-2025.txt
+junk-folder/error-logs.txt
+junk-folder/Umicom Framework - Volume 2 - Sammy Hegab (Draft 4).docx
+junk-folder/Umicom Studio Ide — Build Log Issues (14 Oct 2025, Run 2).docx
