ignore unnecessary files from being committed in remote repository

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,10 @@ junk-folder/error-logs-14-october-2025.txt
 junk-folder/error-logs.txt
 junk-folder/Umicom Framework - Volume 2 - Sammy Hegab (Draft 4).docx
 junk-folder/Umicom Studio Ide — Build Log Issues (14 Oct 2025, Run 2).docx
+junk-folder/Umicom Studio IDE_ Technical and Architectural Review.docx
+junk-folder/Fixed Files – Pass 2 (with Headers & Comments).pdf
+junk-folder/Umicom Studio Ide — Build Log Issues (14 Oct 2025, Run 2).pdf
+junk-folder/Umicom Studio Ide — Build Log Issues (14 Oct).pdf
+.gitignore
+junk-folder/Umicom Studio IDE_ Technical and Architectural Review.pdf
+junk-folder/umicom-studio-ide-project-directory-tree-structure.txt
